# c_hw2

./: .gitignore  .travis.yml  CMakeLists.txt  CPPLINT.cfg  README.md  input.c  main.c  naive_transpose.c  parallel_transpose.c  test_input.cpp  test_naive_transpose.cpp  test_parallel_transpose.cpp
include/: input.h  transpose.h
src/: input.c  main.c  naive_transpose.c  parallel_transpose.c
tests/: test_input.cpp  test_transpose.cpp
